criando mais tabelas

--- a/exercícios/módulo_03/capítulo_21/ex023/tabela002.html
+++ b/exercícios/módulo_03/capítulo_21/ex023/tabela002.html
@@ -7,9 +7,10 @@
         body{
             font-family: Verdana, Geneva, Tahoma, sans-serif;
         }
-        table{
+           table{
             width: 500px;
             border-collapse: collapse;
+            position: relative;
         }
         td, th{
             border: 1px solid black;
@@ -19,79 +20,97 @@
             background-color: gray;
             color: white;
         }
+
+        thead > tr > th{
+            position: sticky;
+            top: -1px;
+            background-color: gray
+        }
+
+        tbody > tr:nth-child(even){
+            background-color: lightgray;
+        }
+        
         th{
             font-weight: bolder;
         }
         .num{
             text-align: right;
         }
+        caption{
+            font-size: 1.4em;
+            padding: 10px;
+            background-color: lightgray;
+            font-weight: bold;
+        }
     </style>
 </head>
 <body>
     <h1>Tabelão</h1>
     <table>
-       <thead>
-           <tr>
-               <th>Estado</th>
-               <th>População</th>
-           </tr>
-       </thead>
-       <tbody>
-           <tr>
-               <td>São Paulo</td>
-               <td class="num">45.919.043</td>
-           </tr>
-           <tr>
-               <td>Mina Gerais</td>
-               <td class="num">21.168.791</td>
-           </tr>
-           <tr>
-               <td>Rio de Janeiro</td>
-               <td class="num">17.264.943</td>
-           </tr>
-           <tr>
-               <td>Bahia</td>
-               <td class="num">14.985.284</td>
-           </tr>
-           <tr>
-               <td>Paraná</td>
-               <td class="num">11.597.484</td>
-           </tr>
-           <tr>
-               <td>Rio Grande do Sul</td>
-               <td class="num">11.466.630</td>
-           </tr>
-           <tr>
-               <td>Pernambuco</td>
-               <td class="num">9.674.793</td>
-           </tr>
-           <tr>
-               <td>Ceará</td>
-               <td class="num">9.240.580</td>
-           </tr>
-           <tr>
-               <td>Pará</td>
-               <td class="num">8.777.124</td>
-           </tr>
-           <tr>
-               <td>Santa Catarina</td>
-               <td class="num">7.338.473</td>
-           </tr>
-           <tr>
-               <td>Goiás</td>
-               <td class="num">7.206.589</td>
-           </tr>
-           <tr>
-               <td>Maranhão</td>
-               <td class="num">7.153.262</td>
-           </tr>
-       </tbody>
-       <tfoot>
-           <tr>
-               <th>Total de Habitantes</th>
-               <td class="num"><strong>213.300.000</strong></td>
-           </tr>
-       </tfoot>
+        <caption>População das Unidades Federativas</caption>
+        <thead>
+            <tr>
+                <th>Estado</th>
+                <th style="width: 50px;">População</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>São Paulo</td>
+                <td class="num">45.919.043</td>
+            </tr>
+            <tr>
+                <td>Mina Gerais</td>
+                <td class="num">21.168.791</td>
+            </tr>
+            <tr>
+                <td>Rio de Janeiro</td>
+                <td class="num">17.264.943</td>
+            </tr>
+            <tr>
+                <td>Bahia</td>
+                <td class="num">14.985.284</td>
+            </tr>
+            <tr>
+                <td>Paraná</td>
+                <td class="num">11.597.484</td>
+            </tr>
+            <tr>
+                <td>Rio Grande do Sul</td>
+                <td class="num">11.466.630</td>
+            </tr>
+            <tr>
+                <td>Pernambuco</td>
+                <td class="num">9.674.793</td>
+            </tr>
+            <tr>
+                <td>Ceará</td>
+                <td class="num">9.240.580</td>
+            </tr>
+            <tr>
+                <td>Pará</td>
+                <td class="num">8.777.124</td>
+            </tr>
+            <tr>
+                <td>Santa Catarina</td>
+                <td class="num">7.338.473</td>
+            </tr>
+            <tr>
+                <td>Goiás</td>
+                <td class="num">7.206.589</td>
+            </tr>
+            <tr>
+                <td>Maranhão</td>
+                <td class="num">7.153.262</td>
+            </tr>
+        </tbody>
+        <tfoot>
+            <tr>
+                <th>Total de Habitantes</th>
+                <td class="num"><strong>213.300.000</strong></td>
+            </tr>
+        </tfoot>
     </table>
 </body>
 </html>
