--- a/exercícios/módulo_04/capítulo_25/mq004/index.html
+++ b/exercícios/módulo_04/capítulo_25/mq004/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="estilos/style.css" media="all">
+    <link rel="stylesheet" href="estilos/media-queries.css">
     <title>Dispositivos diferentes</title>
 </head>
 <body>
-    
+    <main>
+        <h1>Testando Media Queries</h1>
+        <img src="../imagens/icon-phone.png" id="phone">
+        <img src="../imagens/icon-tablet.png" id="tablet">
+        <img src="../imagens/icon-print.png" id="print">
+        <img src="../imagens/icon-pc.png" id="pc">
+        <img src="../imagens/icon-tv.png" id="tv">
+    </main>
 </body>
 </html>
