--- a/exercícios/módulo_04/capítulo_25/mq001/index.html
+++ b/exercícios/módulo_04/capítulo_25/mq001/index.html
@@ -12,10 +12,13 @@
     <header>
         <h1>New York Treta</h1>
         <nav>
+            <label class="menu">=<input type="checkbox" name="menu-check" id="menu-check"></label>
             <ul>
                 <li>Esportes</li>
                 <li>Tecnologia</li>
                 <li>Política</li>
+                <li>Celebridades</li>
+                <li>Infantil</li>
             </ul>
         </nav>
     </header>
