--- a/exercícios/módulo_04/capítulo_25/mq001/index.html
+++ b/exercícios/módulo_04/capítulo_25/mq001/index.html
@@ -12,7 +12,9 @@
     <header>
         <h1>New York Treta</h1>
         <nav>
-            <label class="menu">=<input type="checkbox" name="menu-check" id="menu-check"></label>
+            <label class="menu">
+                <ion-icon name="menu"></ion-icon>
+                <input type="checkbox" name="menu-check" id="menu-check"></label>
             <ul>
                 <li>Esportes</li>
                 <li>Tecnologia</li>
@@ -33,5 +35,8 @@
             
         </article>
     </main>
+
+    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
