--- a/exercícios/módulo_05/capítulo_27/flexbox02.html
+++ b/exercícios/módulo_05/capítulo_27/flexbox02.html
@@ -13,7 +13,11 @@
             flex-flow: row wrap;
             gap: 5px;
             padding: 10px;
+            height: 500px;
             background-color: orange;
+            justify-content: center;
+            align-items: center;
+            align-content: center;
         }
 
         .item {
@@ -22,8 +26,8 @@
             border-radius: 5px;
             color: wheat;
             font-size: 2em;
-            flex: auto;
             text-align: center;
+            /* flex: auto; */
         }
     </style>
 </head>
